i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0/sql-manual/sql-functions/scalar-functions/date-time-functions/milliseconds-add.md
---
{
    "title": "MILLISECONDS_ADD",
    "language": "zh-CN"
}
---

## 描述

MILLISECONDS_ADD 函数用于向输入的日期时间值中添加指定的毫秒数，并返回计算后的新日期时间值。该函数支持处理含毫秒精度的 DATETIME 类型。

## 语法

```sql
MILLISECONDS_ADD(`<datetime>`, `<delta>`)
```

## 参数

| 参数 | 说明 |
| ---- | ---- |
| `<datetime>` | 输入的日期时间值，支持输入 datetime 类型,具体 datetime 格式请查看 [datetime 的转换](../../../../../current/sql-manual/basic-element/sql-data-types/conversion/datetime-conversion) |
| `<delta>` | 要添加的毫秒数，类型为 INT，1 秒 = 1,000 毫秒 = 1,000,000 微秒 |

## 返回值

返回 DATETIME 类型的值，表示基准时间添加指定毫秒后的结果.

- 若 `<delta>` 为负数，函数效果等同于从基准时间中减去对应毫秒数（即 MILLISECONDS_ADD (basetime, -n) 等价于 MILLISECONDS_SUB (basetime, n)）。
- 若输入为 DATE 类型（仅包含年月日），默认其时间部分为 00:00:00.000。
- 若计算结果超出 DATETIME 类型的有效范围（0000-01-01 00:00:00 至 9999-12-31 23:59:59.999999），抛出异常。
- 若任一参数为 NULL，返回 NULL。
- 若 `<delta>` 超出 INT 类型范围（-2147483648 至 2147483647），返回 NULL。。

## 举例

```sql
---增加一毫秒
SELECT MILLISECONDS_ADD('2023-09-08 16:02:08.435123', 1);

+---------------------------------------------------+
| MILLISECONDS_ADD('2023-09-08 16:02:08.435123', 1) |
+---------------------------------------------------+
| 2023-09-08 16:02:08.436123                        |
+---------------------------------------------------+

---毫秒数为负数，对应日期时间减去相应毫秒数
SELECT MILLISECONDS_ADD('2023-05-01 10:00:00.800', -300);
+---------------------------------------------------+
| MILLISECONDS_ADD('2023-05-01 10:00:00.800', -300) |
+---------------------------------------------------+
| 2023-05-01 10:00:00.500000                        |
+---------------------------------------------------+

--- 输入为 DATE 类型（默认时间 00:00:00.000）
SELECT MILLISECONDS_ADD('2023-01-01', 1500);
+--------------------------------------+
| MILLISECONDS_ADD('2023-01-01', 1500) |
+--------------------------------------+
| 2023-01-01 00:00:01.500000           |
+--------------------------------------+

---超出日期时间范围，抛出异常
SELECT MILLISECONDS_ADD('9999-12-31 23:59:59.999', 2000) AS after_add;
ERROR 1105 (HY000): errCode = 2, detailMessage = (10.16.10.3)[E-218]Operation milliseconds_add of 9999-12-31 23:59:59.999000, 2000 out of range

---任意参数为 NULL，返回 NULL
SELECT MILLISECONDS_ADD('2023-10-01 12:00:00.500', NULL) AS after_add;
+-----------+
| after_add |
+-----------+
| NULL      |
+-----------+

---delta 参数超过 INT 范围，返回 NULL
SELECT MILLISECONDS_ADD('2023-09-08 16:02:08.435', 2147483648) AS after_add;
+-----------+
| after_add |
+-----------+
| NULL      |
+-----------+---增加一毫秒
SELECT MILLISECONDS_ADD('2023-09-08 16:02:08.435123', 1);

+---------------------------------------------------+
| MILLISECONDS_ADD('2023-09-08 16:02:08.435123', 1) |
+---------------------------------------------------+
| 2023-09-08 16:02:08.436123                        |
+---------------------------------------------------+

---毫秒数为负数，对应日期时间减去相应毫秒数
SELECT MILLISECONDS_ADD('2023-05-01 10:00:00.800', -300);
+---------------------------------------------------+
| MILLISECONDS_ADD('2023-05-01 10:00:00.800', -300) |
+---------------------------------------------------+
| 2023-05-01 10:00:00.500000                        |
+---------------------------------------------------+

--- 输入为 DATE 类型（默认时间 00:00:00.000）
SELECT MILLISECONDS_ADD('2023-01-01', 1500);
+--------------------------------------+
| MILLISECONDS_ADD('2023-01-01', 1500) |
+--------------------------------------+
| 2023-01-01 00:00:01.500000           |
+--------------------------------------+

---超出日期时间范围，抛出异常
SELECT MILLISECONDS_ADD('9999-12-31 23:59:59.999', 2000) AS after_add;
ERROR 1105 (HY000): errCode = 2, detailMessage = (10.16.10.3)[E-218]Operation milliseconds_add of 9999-12-31 23:59:59.999000, 2000 out of range

---任意参数为 NULL，返回 NULL
SELECT MILLISECONDS_ADD('2023-10-01 12:00:00.500', NULL) AS after_add;
+-----------+
| after_add |
+-----------+
| NULL      |
+-----------+

---delta 参数超过 INT 范围，返回 NULL
SELECT MILLISECONDS_ADD('2023-09-08 16:02:08.435', 2147483648) AS after_add;
+-----------+
| after_add |
+-----------+
| NULL      |
+-----------+
```

